# Nopcommerceapp

./: READ.md  README.md  config.json  pyproject.toml
=/: 0a8c239d-e3d4-4c8b-b2a4-57c609be6203-attachment.txt  1ec31535-61c4-4437-a848-4135d4299e48-container.json  4100eeaf-e8e0-4931-9779-59515c5e2a04-result.json  514fd986-7262-438f-bc15-1856ee28f4f8-attachment.txt  53232564-23f8-4e75-9c5c-95dac724484e-container.json  6346ab1a-8cc4-4d75-b6d2-dd2247a78069-container.json  7757038c-7745-48dd-888e-a46f5391b3a2-container.json  9a345a18-7224-4eda-85ec-21f7c7552b9d-container.json  efc6d31b-591d-4b01-b1e0-2b49c60d4d8b-result.json  f51e7ae1-529b-41b7-aa85-fb67ed8fd55b-container.json
configuration/: config.ini
lib/sitePageFactory/: adminLogin_page.py  amazonSearch_page.py  home_page.py
lib/utilis/: base_page_object.py  customLogger.py  excelutil.py  readproperties.py
reports/: 135b650a-347e-4999-b1b1-02232d9ece48-container.json  24c6bc8d-8a43-452b-aa52-365e712c67c5-result.json  403c4969-3401-4302-b22b-b488cb2642e1-result.json  6a219a96-f1ab-4cc5-b8c5-6a55c1c80133-container.json  748c0402-46f2-4eed-b588-33e6c8f16866-container.json  88854748-df5e-46ed-9272-d6a1f30dc8ce-container.json  9d6cab8f-8519-4a92-995b-849d74d217b0-attachment.txt  bcdb1743-beb2-4239-bc15-b08ee8877e06-container.json  dabec271-baf4-4af6-8768-6c447d33475b-attachment.txt  environment.properties  executor.json  f2587377-3056-4cf1-bef7-3c766a0f9475-container.json
resources/: testdata.xlsx
test/: conftest.py  test_TestLogin.py  test_TestLoginDDT.py  test_searchbox.py
