[tool.poetry]
name = "MY_TESTING_FRAMEWORK"
version = "0.1.0"
description = "Creating a venev for Test Project"
authors = ["Ravi krishna Rao Bevara"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "6.2.4"
selenium = "3.141.0"
webdriver_manager = "2.5.3"
allure-pytest = "2.8.40"
openpyxl =  "3.0.10"
pytest-xdist = "^3.1.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"